added new table-with-fixed-header logic and custom scroll

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 <link rel="stylesheet" href="css/airvis.css">
 <!--<link rel="stylesheet" href="css/main.css">-->
 <link rel="stylesheet" href="css/checkbox.css">
-<link rel="stylesheet" href="http://airtribune.com/sites/all/modules/contrib/countryicons_shiny/shiny-sprite.css">
+<!--<link rel="stylesheet" href="http://airtribune.com/sites/all/modules/contrib/countryicons_shiny/shiny-sprite.css">-->
 <!--<link rel="stylesheet" href="css/ui-lightness/jquery-ui.css">-->
 
   <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
