--- a/src/js/widgets/PlayerControl/main.html
+++ b/src/js/widgets/PlayerControl/main.html
@@ -18,8 +18,11 @@
 	</div>
 	<div class="airvis-player-controls-wrapper">
 		<div class="airvis-player-controls">
+			<a data-bind="enable: enabled, click: switchPlay, css: { 'player-button-on': enabled(), 'player-button-off': !enabled() }"><span data-bind="text:_state()=='play'?'PAUSE':'PLAY'"></span></a>
+<!--
 			<a data-bind="enable: enabled, click: play, css: { 'player-button-on': _state() == 'play', 'player-button-off': _state() != 'play' }"><span>PLAY</span></a>
 			<a data-bind="enable: enabled, click: pause, css: { 'player-button-on': _state() == 'pause', 'player-button-off': _state() != 'pause' }"><span>PAUSE</span></a>
+-->
 			<a data-bind="enable: enabled, click: changeSpeed.bind($data,1), css: { 'player-button-on': _speed() == 1, 'player-button-off': _speed() != 1 }"><span>x1</span></a>
 			<a data-bind="enable: enabled, click: changeSpeed.bind($data,10), css: { 'player-button-on': _speed() == 10, 'player-button-off': _speed() != 10 }"><span>x10</span></a>
 			<a data-bind="enable: enabled, click: changeSpeed.bind($data,25), css: { 'player-button-on': _speed() == 25, 'player-button-off': _speed() != 25 }"><span>x25</span></a>
