added margin to tinyscrollbar and small corner

--- a/src/js/widgets/UfosTable/main.html
+++ b/src/js/widgets/UfosTable/main.html
@@ -20,7 +20,7 @@
 		</table>
 	</div>
 	<div class="airvis-scrollbar">
-		<div class="scrollbar"><div class="track"><div class="thumb"><div class="end"></div></div></div></div>
+		<div class="scrollbar" style="margin-top:2px;"><div class="track"><div class="thumb"><div class="end"></div></div></div></div>
 		<div class="airvis-table-body viewport">
 			<table class="overview" cellspacing="0" cellpadding="0" border="0">
 				<tbody data-bind="foreach:ufos">
