baseUrl cut off config

--- a/src/index.html
+++ b/src/index.html
@@ -33,8 +33,13 @@
        Modernizr enables HTML5 elements & feature detects for optimal performance.
        Create your own custom Modernizr build: www.modernizr.com/download/ -->
 
-<script data-main="js/init" src="js/require.js"></script>
+<!--
+<script type="text/javascript">
+  var require = { baseUrl: "http://airvis03.ragneta.com/js" };
+</script>
+-->
 
+<script data-main="js/init" src="js/require.js"></script>
 </head>
 <body>
 
@@ -42,7 +47,7 @@
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
   <div role="main" class="airvis-container">
-<!-- ko widget: { data: page, imgRootUrl: "/img/", taskId: 1689, eventId: 1211, isOnline: false, mapWidget: "2d" } --><!-- /ko -->
+    <!-- ko widget: { data: page, imgRootUrl: "/img/", contestId: "cnts-130426-719913251", raceId: "75638ffc-9a13-4e56-ae30-eecfa6441c10", isOnline: false, mapWidget: "2d" } --><!-- /ko -->
   </div>
 
 
