--- a/src/index-simple.html
+++ b/src/index-simple.html
@@ -2,6 +2,13 @@
 <head>
   <meta charset="utf-8">
   <title></title>
+
+<!-- 
+  <script type="text/javascript">
+    var require = { baseUrl: "http://airvis03.ragneta.com/js" };
+  </script>
+-->
+
   <script data-main="js/initSimple" src="js/require.js"></script>
 </head>
 <body>
