--- a/src/js/widgets/PlayerControl/main.html
+++ b/src/js/widgets/PlayerControl/main.html
@@ -18,8 +18,9 @@
 	</div>
 	<div class="airvis-player-controls-wrapper">
 		<div class="airvis-player-controls">
-			<a class="play_pause" data-bind="enable: enabled, click: switchPlay, css: {'player-button-play': enabled() && _state()=='play', 'player-button-pause': enabled() && _state()=='pause', 'player-button-off': !enabled() }"><span data-bind="text:_state()=='play'?'PAUSE':'PLAY'"></span></a>
+			<a class="play_pause" data-bind="enable: enabled, click: switchPlay, css: {'player-button-play': enabled() && _state()=='play', 'player-button-pause': enabled() && _state()=='pause', 'player-button-off': !enabled() }"></a>
 <!--
+	<span data-bind="text:_state()=='play'?'PAUSE':'PLAY'"></span>
 			<a data-bind="enable: enabled, click: play, css: { 'player-button-on': _state() == 'play', 'player-button-off': _state() != 'play' }"><span>PLAY</span></a>
 			<a data-bind="enable: enabled, click: pause, css: { 'player-button-on': _state() == 'pause', 'player-button-off': _state() != 'pause' }"><span>PAUSE</span></a>
 -->
