disable query in case there's no raceId

--- a/src/index-simple.html
+++ b/src/index-simple.html
@@ -39,7 +39,7 @@
 </head>
 <body>
   <div role="main" class="airvis-container">
-    <!-- ko widget: { data: page, contestId: "cnts-130429-3589257087", raceId: "e83b0d78-ca20-41a0-b036-19760103f06d", width: "100%", height: "300px", callback: window.airvisPageLoadedCallback } --><!-- /ko -->
+    <!-- ko widget: { data: page, width: "100%", height: "300px", callback: window.airvisPageLoadedCallback } --><!-- /ko -->
     <a href="#" class="test1">Test1</a>
     <a href="#" class="test2">Test2</a>
   </div>
