--- a/src/js/widgets/UfosTable/main.html
+++ b/src/js/widgets/UfosTable/main.html
@@ -33,9 +33,9 @@
 						<td class="airvis-checkbox" data-bind="visible:$parent.mode()=='full'">
 			                <!-- ko widget: { data: trackVisibleCheckbox, type: 'Checkbox'} --><!-- /ko -->
 						</td>
-						<td class="airvis-pilot-number" data-bind="text: id"></td>
+						<td class="airvis-pilot-number" data-bind="text: $index()+1"></td>
 						<td class="airvis-pilot-name">
-							<span data-bind="text:name"></span>
+							<span data-bind="text:name() + ' |' + id() + '|'"></span>
 							<span class="countryicon-sprite iconset-shiny" data-bind="css:'countrycode-'+country().toLowerCase(),visible:$parent.mode()=='short'"></span>
 						</td>
 						<td class="airvis-pilot-country" data-bind="visible:$parent.mode()=='full'">
