--- a/src/js/widgets/GoogleMap/markerTitle.html
+++ b/src/js/widgets/GoogleMap/markerTitle.html
@@ -1,1 +1,1 @@
-<div style="white-space: nowrap;" data-bind="text: title, style: {color: color}"></div>
+<div style="white-space: nowrap;" class="airvis-marker-title" data-bind="text: title, style: {color: color}"></div>
