--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title></title>
     <link rel="stylesheet" href="css/airvis.css">
     <link rel="stylesheet" href="css/checkbox.css">
-    <link rel="stylesheet" href="http://airtribune.com/sites/all/modules/contrib/countryicons_shiny/shiny-sprite.css">
+    <link rel="stylesheet" href="css/shiny-sprite.css">
     <script data-main="js/init" src="js/lib/require.js"></script>
   </head>
   <body>
