--- a/src/js/widgets/Select/main.html
+++ b/src/js/widgets/Select/main.html
@@ -7,7 +7,7 @@
 	</a>
 	<div class="airvis-selectBox" style="display:none" data-bind="css:selectBoxPosition">
 		<div class="airvis-selectBoxInner" data-bind="foreach:displayValues">
-			<a href="#" data-bind="text:title,click:$parent.setValue.bind($parent,$data),css:{active:$parent.data()==value}"></a>
+			<a href="#" data-bind="text:title,click:$parent.setValue.bind($parent,$data),event:{mouseover:$parent.setHighlighted.bind($parent,$data),mouseout:$parent.clearHighlighted.bind($parent,$data)},css:{active:$parent.high()==value}"></a>
 		</div>
 	</div>
 </div>
