--- a/src/index-simple.html
+++ b/src/index-simple.html
@@ -46,7 +46,7 @@
   </head>
   <body>
     <div role="main" class="airvis-container">
-      <!-- ko widget: { data: page, imgRootUrl: "/img/", contestId: "cnts-130520-3159653810", raceId: "5e102624-c409-4b5d-8aa5-c78381abae3e", width: "100%", height: "600px", callback: window.airvisPageLoadedCallback, mode: "simple", apiVersion: "v0.1" } --><!-- /ko -->
+      <!-- ko widget: { data: page, imgRootUrl: "/img/", contestId: "cnts-130520-3159653810", raceId: "5e102624-c409-4b5d-8aa5-c78381abae3e", width: "100%", height: "600px", callback: window.airvisPageLoadedCallback, mode: "simple", apiVersion: "v0.1", mapOptions: {panControl:false,streetViewControl:false} } --><!-- /ko -->
       <a href="#" class="test1">Test1</a>
       <a href="#" class="test2">Test2</a>
       <a href="#" class="test3">Test3</a>
