--- a/src/index-simple.html
+++ b/src/index-simple.html
@@ -18,19 +18,16 @@
       window.airvisPageLoadedCallback = function(self) {
         self.on("domInit",function() {
           $("a.test1").click(function() {
-            self.setOption("contestId","cnts-130430-3963286941");
-            self.setOption("raceId","a32ed6ca-c031-4e4d-be07-2086e4785ac0");
+            self.setOption("contestId","cnts-130520-3159653810");
+            self.setOption("raceId","5e102624-c409-4b5d-8aa5-c78381abae3e");
+            self.setOption("apiVersion","v0.1");
             self.rebuild();
           });
           $("a.test2").click(function() {
-            self.setOption("contestId","cnts-130429-3589257087");
-            self.setOption("raceId","e83b0d78-ca20-41a0-b036-19760103f06d");
+            self.setOption("contestId","cnts-130522-3500945464");
+            self.setOption("raceId","r-b0590284-a67a-476c-8055-b986e50c2836");
+            self.setOption("apiVersion","v0.1.2");
             self.rebuild();
-          });
-          $("a.test3").click(function() {
-      			self.setOption("contestId","cnts-130507-1477729373");
-      			self.setOption("raceId","538bf4ed-3304-4a30-9c69-90b10d0a8f63");
-      			self.rebuild();
           });
         });
         self.on("loadingError",function() {
@@ -49,7 +46,6 @@
       <!-- ko widget: { data: page, imgRootUrl: "/img/", contestId: "cnts-130520-3159653810", raceId: "5e102624-c409-4b5d-8aa5-c78381abae3e", width: "100%", height: "600px", callback: window.airvisPageLoadedCallback, mode: "simple", apiVersion: "v0.1", mapOptions: {panControl:false,streetViewControl:false} } --><!-- /ko -->
       <a href="#" class="test1">Test1</a>
       <a href="#" class="test2">Test2</a>
-      <a href="#" class="test3">Test3</a>
     </div>
   </body>
 </html>
