Added 3letters country codes

--- a/src/js/widgets/UfosTable/main.html
+++ b/src/js/widgets/UfosTable/main.html
@@ -40,7 +40,7 @@
 						</td>
 						<td class="airvis-pilot-country" data-bind="visible:$parent.mode()=='full'">
 							<span class="countryicon-sprite iconset-shiny" data-bind="css:'countrycode-'+country().toLowerCase()"></span>
-							<span data-bind="text:country"></span>
+							<span data-bind="text:country3"></span>
 						</td>
 						<!-- ko if: noData -->
 							<td colspan="4" class="airvis-table-nodata">---</td>
