--- a/src/js/widgets/GoogleMap/waypointTitle.html
+++ b/src/js/widgets/GoogleMap/waypointTitle.html
@@ -1,1 +1,1 @@
-<div style="white-space: nowrap; font-weight: bold;" data-bind="text: title, style: {color: color}"></div>
+<div class="airvis-waypoint-title" data-bind="text: title, style: {color: color}"></div>
