--- a/src/index-simple.html
+++ b/src/index-simple.html
@@ -29,6 +29,20 @@
             self.setOption("apiVersion","v0.1.2");
             self.rebuild();
           });
+
+          $("a.test3").click(function() {
+            self.setOption("contestId","cnts-130522-3500945464");
+            self.setOption("raceId","r-1e8e16c6-5f0c-441b-86dc-66d81aaadab3");
+            self.setOption("apiVersion","v0.1.2");
+            self.rebuild();
+          });
+
+          $("a.test4").click(function() {
+            self.setOption("contestId","cnts-130522-3500945464");
+            self.setOption("raceId","r-37c58c05-e669-49be-9ca7-f67d3b2186c5");
+            self.setOption("apiVersion","v0.1.2");
+            self.rebuild();
+          });
         });
         self.on("loadingError",function() {
           console.log("LOADING ERROR");
@@ -43,9 +57,11 @@
   </head>
   <body>
     <div role="main" class="airvis-container">
-      <!-- ko widget: { data: page, imgRootUrl: "/img/", contestId: "cnts-130520-3159653810", raceId: "5e102624-c409-4b5d-8aa5-c78381abae3e", width: "100%", height: "600px", callback: window.airvisPageLoadedCallback, mode: "simple", apiVersion: "v0.1", mapOptions: {panControl:false,streetViewControl:false} } --><!-- /ko -->
+      <!-- ko widget: { data: page, imgRootUrl: "/img/", contestId: "cnts-130520-3159653810", raceId: "5e102624-c409-4b5d-8aa5-c78381abae3e", width: "100%", height: "600px", callback: window.airvisPageLoadedCallback, mode: "simple", apiVersion: "v0.1", mapOptions: {panControl:false,streetViewControl:false,scrollwheel:false}} --><!-- /ko -->
       <a href="#" class="test1">Test1</a>
       <a href="#" class="test2">Test2</a>
+      <a href="#" class="test3">Test3</a>
+      <a href="#" class="test4">Test4</a>
     </div>
   </body>
 </html>
