--- a/src/index-simple.html
+++ b/src/index-simple.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="css/airvis.css">
     <title></title>
 
 <!-- 
@@ -43,6 +44,15 @@
             self.setOption("apiVersion","v0.1.2");
             self.rebuild();
           });
+
+          $("a.setUserVisualMode").click(function() {
+            self.profVisualMode("user");
+          });
+
+          $("a.setProfVisualMode").click(function() {
+            self.profVisualMode("prof");
+          });
+
         });
         self.on("loadingError",function() {
           console.log("LOADING ERROR");
@@ -57,11 +67,13 @@
   </head>
   <body>
     <div role="main" class="airvis-container">
-      <!-- ko widget: { data: page, imgRootUrl: "/img/", contestId: "cnts-130520-3159653810", raceId: "5e102624-c409-4b5d-8aa5-c78381abae3e", width: "100%", height: "600px", callback: window.airvisPageLoadedCallback, mode: "simple", apiVersion: "v0.1", mapOptions: {panControl:false,streetViewControl:false,scrollwheel:false}} --><!-- /ko -->
+      <!-- ko widget: { data: page, imgRootUrl: "/img/", contestId: "cnts-130520-3159653810", raceId: "5e102624-c409-4b5d-8aa5-c78381abae3e", width: "100%", height: "300px", callback: window.airvisPageLoadedCallback, mode: "simple", apiVersion: "v0.1", mapOptions: {panControl:false,streetViewControl:false,scrollwheel:false}} --><!-- /ko -->
       <a href="#" class="test1">Test1</a>
       <a href="#" class="test2">Test2</a>
       <a href="#" class="test3">Test3</a>
       <a href="#" class="test4">Test4</a>
+      <a href="#" class="setUserVisualMode">Set User Visual Mode</a>
+      <a href="#" class="setProfVisualMode">Set Prof Visual Mode</a>
     </div>
   </body>
 </html>
