--- a/src/js/widgets/PlayerControl/main.html
+++ b/src/js/widgets/PlayerControl/main.html
@@ -12,6 +12,7 @@
 		<div class="airvis-player-selects">
 			<!-- ko widget: { data: cylindersVisualSelect, type: "Select"} --><!-- /ko -->
 			<!-- ko widget: { data: namesVisualSelect, type: "Select"} --><!-- /ko -->
+			<!-- ko widget: { data: profVisualSelect, type: "Select"} --><!-- /ko -->
 			<!-- ko widget: { data: tracksVisualSelect, type: "Select"} --><!-- /ko -->
 			<!-- ko widget: { data: modelsVisualSelect, type: "Select"} --><!-- /ko -->
 		</div>
