--- a/src/index-simple.html
+++ b/src/index-simple.html
@@ -44,15 +44,6 @@
             self.setOption("apiVersion","v0.1.2");
             self.rebuild();
           });
-
-          $("a.setUserVisualMode").click(function() {
-            self.profVisualMode("user");
-          });
-
-          $("a.setProfVisualMode").click(function() {
-            self.profVisualMode("prof");
-          });
-
         });
         self.on("loadingError",function() {
           console.log("LOADING ERROR");
@@ -67,13 +58,12 @@
   </head>
   <body>
     <div role="main" class="airvis-container">
-      <!-- ko widget: { data: page, imgRootUrl: "/img/", contestId: "cnts-130520-3159653810", raceId: "5e102624-c409-4b5d-8aa5-c78381abae3e", width: "100%", height: "300px", callback: window.airvisPageLoadedCallback, mode: "simple", apiVersion: "v0.1", mapOptions: {panControl:false,streetViewControl:false,scrollwheel:false}} --><!-- /ko -->
+      <!-- ko widget: { data: page, imgRootUrl: "/img/", contestId: "cnts-130520-3159653810", raceId: "5e102624-c409-4b5d-8aa5-c78381abae3e", width: "100%", height: "300px", callback: window.airvisPageLoadedCallback, mode: "simple", apiVersion: "v0.1", mapOptions: {panControl:false,streetViewControl:false,scrollwheel:false,zoomControlOptions:{style:google.maps.ZoomControlStyle.LARGE}}} --><!-- /ko -->
+      <br><br>
       <a href="#" class="test1">Test1</a>
       <a href="#" class="test2">Test2</a>
       <a href="#" class="test3">Test3</a>
       <a href="#" class="test4">Test4</a>
-      <a href="#" class="setUserVisualMode">Set User Visual Mode</a>
-      <a href="#" class="setProfVisualMode">Set Prof Visual Mode</a>
     </div>
   </body>
 </html>
