--- a/src/index-simple.html
+++ b/src/index-simple.html
@@ -58,12 +58,12 @@
   </head>
   <body>
     <div role="main" class="airvis-container">
-      <!-- ko widget: { data: page, imgRootUrl: "/img/", contestId: "cnts-130520-3159653810", raceId: "5e102624-c409-4b5d-8aa5-c78381abae3e", width: "100%", height: "300px", callback: window.airvisPageLoadedCallback, mode: "simple", apiVersion: "v0.1", mapOptions: {panControl:false,streetViewControl:false,scrollwheel:false,zoomControl:true,mapTypeControl:false,zoomControlOptions:{style:google.maps.ZoomControlStyle.LARGE}}} --><!-- /ko -->
+      <!-- ko widget: { data: page, imgRootUrl: "/img/", contestId: "cnts-130520-3159653810", raceId: "5e102624-c409-4b5d-8aa5-c78381abae3e", width: "100%", height: "380px", callback: window.airvisPageLoadedCallback, mode: "simple", apiVersion: "v0.1", mapOptions: {panControl:false,streetViewControl:false,scrollwheel:false,zoomControl:true,mapTypeControl:false,zoomControlOptions:{style:google.maps.ZoomControlStyle.LARGE}}} --><!-- /ko -->
       <br><br>
       <a href="#" class="test1">Test1</a>
       <a href="#" class="test2">Test2</a>
-      <a href="#" class="test3">Test3</a>
-      <a href="#" class="test4">Test4</a>
+      <a href="#" class="test3">Day 2</a>
+      <a href="#" class="test4">Day 1</a>
     </div>
   </body>
 </html>
