added loading icon on the slider timeline

--- a/src/js/widgets/Slider/main.html
+++ b/src/js/widgets/Slider/main.html
@@ -1,6 +1,6 @@
 <div>
 	<div class="slider airvis-slider" data-bind="event:{mousedown:dragStart}">
 		<div class="airvis-slider-range" data-bind="style:{width:valPercent()+'%'}"></div>
-		<a class="airvis-slider-handle" href="#" data-bind="style:{left:dragPercent()+'%'}"></a>
+		<a class="airvis-slider-handle" href="#" data-bind="css:handleMode,style:{left:dragPercent()+'%'}"></a>
 	</div>
 </div>
