--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
     <div role="main" class="airvis-container">
       <!-- koold widget: { data: page, imgRootUrl: "/img/", contestId: "cnts-130507-1477729373", raceId: "538bf4ed-3304-4a30-9c69-90b10d0a8f63" } --><!-- /koold -->
       <!-- koold widget: { data: page, imgRootUrl: "/img/", contestId: "cnts-130514-1555631016", raceId: "aa66d480-9499-4c02-a4fb-df420b709e5c" } --><!-- /koold -->
-      <!-- ko widget: { data: page, imgRootUrl: "/img/", contestId: "cnts-130520-3159653810", raceId: "5e102624-c409-4b5d-8aa5-c78381abae3e", apiVersion: "v0.1" } --><!-- /ko -->
+      <!-- koold widget: { data: page, imgRootUrl: "/img/", contestId: "cnts-130520-3159653810", raceId: "5e102624-c409-4b5d-8aa5-c78381abae3e", apiVersion: "v0.1", mapOptions: {panControl:false,streetViewControl:false,zoomControl:true} } --><!-- /koold -->
+      <!-- ko widget: { data: page, imgRootUrl: "/img/", contestId: "cnts-130607-2736547863", raceId: "r-23be3210-f0f7-49c3-b071-63da6cd56e61", apiVersion: "v0.1.4", mapOptions: {panControl:false,streetViewControl:false,zoomControl:true} } --><!-- /ko -->
     </div>
   </body>
 </html>
