--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
       <!-- koold widget: { data: page, imgRootUrl: "/img/", contestId: "cnts-130520-3159653810", raceId: "5e102624-c409-4b5d-8aa5-c78381abae3e", apiVersion: "v0.1", mapOptions: {panControl:false,streetViewControl:false,zoomControl:true} } --><!-- /koold -->
       <!-- koold widget: { data: page, imgRootUrl: "/img/", contestId: "cnts-130607-2736547863", raceId: "r-23be3210-f0f7-49c3-b071-63da6cd56e61", apiVersion: "v0.1.4", mapOptions: {panControl:false,streetViewControl:false,zoomControl:true} } --><!-- /koold -->
       <!-- koold widget: { data: page, imgRootUrl: "/img/", contestId: "cnts-130607-3111244366", raceId: "r-9f445bf4-e4a9-4bed-82dc-3fcbf529c14e", apiVersion: "v0.1.4", mapOptions: {panControl:false,streetViewControl:false,zoomControl:true} } --><!-- /koold -->
-      <!-- ko widget: { data: page, imgRootUrl: "/img/", contestId: "cnts-130609-268188120", raceId: "r-31af8987-c95a-4b84-b237-64e820cffb4a", apiVersion: "v0.1.4", mapOptions: {panControl:false,streetViewControl:false,zoomControl:true} } --><!-- /ko -->
+      <!-- koold widget: { data: page, imgRootUrl: "/img/", contestId: "cnts-130609-268188120", raceId: "r-31af8987-c95a-4b84-b237-64e820cffb4a", apiVersion: "v0.1.4", mapOptions: {panControl:false,streetViewControl:false,zoomControl:true} } --><!-- /koold -->
+      <!-- ko widget: { data: page, imgRootUrl: "/img/", contestId: "cnts-130614-4278329127", raceId: "r-7dc4d514-aa6b-44cb-b515-18cec12d8691", apiVersion: "v0.1.4", mapOptions: {panControl:false,streetViewControl:false,zoomControl:true} } --><!-- /ko -->
     </div>
   </body>
 </html>
