facebook widget added

--- a/src/js/widgets/TrackerPageDebug/main.html
+++ b/src/js/widgets/TrackerPageDebug/main.html
@@ -17,6 +17,11 @@
 		<!-- ko widget: {data: ufosTableWindow, type: 'Window'} -->
 			<!-- ko widget: { data: ufosTable, type: 'UfosTable', modalWindow: ufosTableWindow } --><!-- /ko -->
 		<!-- /ko -->
+
+		<!-- ko widget: {data: facebookWindow, type: 'Window'} -->
+			<!-- ko widget: { data: facebook, type: 'Facebook', modalWindow: facebookWindow } --><!-- /ko -->
+		<!-- /ko -->
+
 	<!-- /ko -->
 </div>
 <!-- /ko -->
