--- a/src/js/widgets/UfosTable/main.html
+++ b/src/js/widgets/UfosTable/main.html
@@ -26,7 +26,7 @@
 		<div class="airvis-table-body viewport">
 			<table class="overview" cellspacing="0" cellpadding="0" border="0">
 				<tbody data-bind="foreach:tableUfos">
-					<tr>
+					<tr data-bind="visible:!noData()">
 						<td class="airvis-checkbox">
 			                <!-- ko widget: { data: visibleCheckbox, type: 'Checkbox'} --><!-- /ko -->
 						</td>
