added a little width diff that depends on the width of the document

--- a/src/js/widgets/PlayerControl/main.html
+++ b/src/js/widgets/PlayerControl/main.html
@@ -9,11 +9,13 @@
 			<div class="airvis-player-time" data-bind="text:localTime"></div>
 		</div>
 		<div class="airvis-player-timeText airvis-local">Local time</div>
-		<div class="airvis-player-selects">
-			<!-- ko widget: { data: cylindersVisualSelect, type: "Select"} --><!-- /ko -->
-			<!-- ko widget: { data: namesVisualSelect, type: "Select"} --><!-- /ko -->
-			<!-- ko widget: { data: tracksVisualSelect, type: "Select"} --><!-- /ko -->
-			<!-- ko widget: { data: modelsVisualSelect, type: "Select"} --><!-- /ko -->
+		<div class="airvis-player-selects-container">
+			<div class="airvis-player-selects">
+				<!-- ko widget: { data: cylindersVisualSelect, type: "Select"} --><!-- /ko -->
+				<!-- ko widget: { data: namesVisualSelect, type: "Select"} --><!-- /ko -->
+				<!-- ko widget: { data: tracksVisualSelect, type: "Select"} --><!-- /ko -->
+				<!-- ko widget: { data: modelsVisualSelect, type: "Select"} --><!-- /ko -->
+			</div>
 		</div>
 	</div>
 	<div class="airvis-player-controls-wrapper">
