--- a/src/index-simple.html
+++ b/src/index-simple.html
@@ -51,6 +51,20 @@
         self.on("loaded",function() {
           console.log("LOADING SUCCESS");
         });
+
+        var getTimeStr = function(h,m,s) {
+          h = Math.abs(h);
+          m = Math.abs(m);
+          s = Math.abs(s);
+          return (h<10?"0":"") + h + ":" + (m<10?"0":"") + m + ":" + (s<10?"0":"") + s;
+        }
+
+        var setTime = function() {
+          var d = Math.floor((self.raceKey()-new Date().getTime())/1000);
+          document.getElementById("time").innerHTML = (d<0?"-":"") + getTimeStr(Math.floor(d/3600),Math.floor(d%3600/60),d%60);
+          setTimeout(setTime,1000);
+        }
+        setTime();
       }
 
     </script>
@@ -58,12 +72,13 @@
   </head>
   <body>
     <div role="main" class="airvis-container">
-      <!-- ko widget: { data: page, imgRootUrl: "/img/", contestId: "cnts-130520-3159653810", raceId: "5e102624-c409-4b5d-8aa5-c78381abae3e", width: "100%", height: "380px", callback: window.airvisPageLoadedCallback, mode: "simple", apiVersion: "v0.1", mapOptions: {panControl:false,streetViewControl:false,scrollwheel:false,zoomControl:true,mapTypeControl:false,zoomControlOptions:{style:google.maps.ZoomControlStyle.LARGE}}} --><!-- /ko -->
+      <!-- ko widget: { data: page, imgRootUrl: "/img/", contestId: "cnts-130525-2928126425", raceId: "r-533ff015-0bb1-42af-bfa3-ffa23c4469ac", width: "100%", height: "380px", callback: window.airvisPageLoadedCallback, mode: "simple", apiVersion: "v0.2", mapOptions: {panControl:false,streetViewControl:false,scrollwheel:false,zoomControl:true,mapTypeControl:false,zoomControlOptions:{style:google.maps.ZoomControlStyle.LARGE}}} --><!-- /ko -->
       <br><br>
       <a href="#" class="test1">Test1</a>
       <a href="#" class="test2">Test2</a>
       <a href="#" class="test3">Day 2</a>
       <a href="#" class="test4">Day 1</a>
+      <div id="time"></div>
     </div>
   </body>
 </html>
