TMP Live status added and there's something about canvases

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       <!-- koold widget: { data: page, imgRootUrl: "/img/", contestId: "cnts-130607-3111244366", raceId: "r-9f445bf4-e4a9-4bed-82dc-3fcbf529c14e", apiVersion: "v0.1.4", mapOptions: {panControl:false,streetViewControl:false,zoomControl:true} } --><!-- /koold -->
       <!-- koold widget: { data: page, imgRootUrl: "/img/", contestId: "cnts-130609-268188120", raceId: "r-31af8987-c95a-4b84-b237-64e820cffb4a", apiVersion: "v0.1.4", mapOptions: {panControl:false,streetViewControl:false,zoomControl:true} } --><!-- /koold -->
       <!-- koold widget: { data: page, imgRootUrl: "/img/", contestId: "cnts-130614-4278329127", raceId: "r-7dc4d514-aa6b-44cb-b515-18cec12d8691", apiVersion: "v0.1.4", mapOptions: {panControl:false,streetViewControl:false,zoomControl:true} } --><!-- /koold -->
-      <!-- ko widget: { data: page, imgRootUrl: "/img/", contestId: "cnts-130525-2928126425", raceId: "r-533ff015-0bb1-42af-bfa3-ffa23c4469ac", apiVersion: "v0.2", mapOptions: {panControl:false,streetViewControl:false,zoomControl:true} } --><!-- /ko -->
+      <!-- ko widget: { data: page, imgRootUrl: "/img/", contestId: "cnts-130525-2928126425", raceId: "r-533ff015-0bb1-42af-bfa3-ffa23c4469ac", apiVersion: "v0.2", mapOptions: {panControl:false,streetViewControl:false,zoomControl:true}, isOnline: true } --><!-- /ko -->
     </div>
   </body>
 </html>
