Distance measurer added

--- a/src/js/widgets/TrackerPageDebug/main.html
+++ b/src/js/widgets/TrackerPageDebug/main.html
@@ -37,6 +37,9 @@
 		<!-- ko widget: {data: retrieveChatWindow, type: 'Window'} -->
 			<!-- ko widget: { data: retrieveChat, type: 'RetrieveChat', modalWindow: retrieveChatWindow } --><!-- /ko -->
 		<!-- /ko -->
+    <!-- ko widget: {data: retrieveDistanceMeasurerWindow, type: 'Window'} -->
+    <!-- ko widget: { data: retrieveDistanceMeasurer, type: 'RetrieveDistanceMeasurer', modalWindow: retrieveDistanceMeasurerWindow } --><!-- /ko -->
+    <!-- /ko -->
 	<!-- /ko -->	
 
 </div>
