--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="/s.css" />
-		<script type="text/javascript" src="/jquery.js"></script>
-		<script type="text/javascript" src="/knockout.js"></script>
-		<script type="text/javascript" src="/latlon.js"></script>
+		<link rel="stylesheet" href="s.css" />
+		<script type="text/javascript" src="jquery.js"></script>
+		<script type="text/javascript" src="knockout.js"></script>
+		<script type="text/javascript" src="latlon.js"></script>
 	
 		<script type="text/javascript">
 		$(function() { 
